// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResultsFooter component renders correctly 1`] = `
<div>
  <div
    class="css-x2mpkr"
    data-testid="document-results-footer"
  >
    <div
      class="MuiBox-root css-h5fkc8"
    >
      <div
        class="css-10h4yv9"
      >
        <div
          class="css-179cxs2"
        >
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            data-gtm="{"id":"download3-button1","label":"MC: downloadList.download (4)","action":"[\\"http://doesnot-exist.com/fileName\\",\\"http://pimDocument\\",\\"http://pimDocument\\"]"}"
            data-testid="document-table-download-button"
            tabindex="0"
            type="button"
          >
            MC: downloadList.download (4)
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-xc55i5-MuiButtonBase-root-MuiButton-root"
            data-testid="document-results-footer-reset-button"
            tabindex="0"
            type="button"
          >
            MC: downloadList.clear
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="css-vqe3zw"
        >
          <div
            class="css-12wvte8"
          >
            <span>
              MC: downloadList.totalSize.label
            </span>
            <span
              class="documentResultsFooter-totalSizeValue"
              data-testid="document-results-footer-total-size-value"
            >
              30 B
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-53ynbr-MuiTypography-root"
            data-testid="document-results-footer-max-size-value"
          >
            MC: downloadList.maxSize
          </p>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 documentResultsFooter-recaptcha css-aoter2-MuiTypography-root"
        data-testid="document-results-footer-recaptcha"
      >
        This site is protected by reCAPTCHA and the Google 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
          data-testid="recaptcha-privacy-policy-link"
          href="https://policies.google.com/privacy"
          referrerpolicy="no-referrer"
          rel="noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
         and 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
          data-testid="recaptcha-terms-of-service-link"
          href="https://policies.google.com/terms"
          referrerpolicy="no-referrer"
          rel="noreferrer"
          target="_blank"
        >
          Terms of Service
        </a>
         apply.
      </p>
    </div>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if download item is array 1`] = `
<div>
  <div
    class="css-x2mpkr"
    data-testid="document-results-footer"
  >
    <div
      class="MuiBox-root css-h5fkc8"
    >
      <div
        class="css-10h4yv9"
      >
        <div
          class="css-179cxs2"
        >
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            data-gtm="{"id":"download3-button1","label":"MC: downloadList.download (2)","action":"[\\"http://pimDocument\\",\\"http://pimDocument\\"]"}"
            data-testid="document-table-download-button"
            tabindex="0"
            type="button"
          >
            MC: downloadList.download (2)
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-xc55i5-MuiButtonBase-root-MuiButton-root"
            data-testid="document-results-footer-reset-button"
            tabindex="0"
            type="button"
          >
            MC: downloadList.clear
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="css-vqe3zw"
        >
          <div
            class="css-12wvte8"
          >
            <span>
              MC: downloadList.totalSize.label
            </span>
            <span
              class="documentResultsFooter-totalSizeValue"
              data-testid="document-results-footer-total-size-value"
            >
              20 B
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-53ynbr-MuiTypography-root"
            data-testid="document-results-footer-max-size-value"
          >
            MC: downloadList.maxSize
          </p>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 documentResultsFooter-recaptcha css-aoter2-MuiTypography-root"
        data-testid="document-results-footer-recaptcha"
      >
        This site is protected by reCAPTCHA and the Google 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
          data-testid="recaptcha-privacy-policy-link"
          href="https://policies.google.com/privacy"
          referrerpolicy="no-referrer"
          rel="noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
         and 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
          data-testid="recaptcha-terms-of-service-link"
          href="https://policies.google.com/terms"
          referrerpolicy="no-referrer"
          rel="noreferrer"
          target="_blank"
        >
          Terms of Service
        </a>
         apply.
      </p>
    </div>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if onDownloadClick not passed 1`] = `
<div>
  <div
    class="css-x2mpkr"
    data-testid="document-results-footer"
  />
</div>
`;
